syntax = "proto3";

package auth;

option go_package = "github.com/hari-sputra/furniture-ecommerce-grpc-be/pb/auth";

import "common/base_response.proto";
import "buf/validate/validate.proto";



service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
    string full_name = 1 [(buf.validate.field).string = {min_len : 3, max_len : 255}];
    string email = 2 [(buf.validate.field).string = {email : true, max_len : 255}];
    string password = 3 [(buf.validate.field).string = {min_len : 6, max_len : 255}];
    string password_confirmation = 4 [(buf.validate.field).string = {min_len : 6, max_len : 255}];
}

message LoginRequest {
   
    string email = 1 [(buf.validate.field).string = {email : true}];
    string password = 2;
}

message LogoutRequest {}

message ChangePasswordRequest {
    string old_password = 1 [(buf.validate.field).string = {min_len : 6, max_len : 255}];
    string new_password = 2 [(buf.validate.field).string = {min_len : 6, max_len : 255}];
    string new_password_confirmation = 3 [(buf.validate.field).string = {min_len : 6, max_len : 255}];
}

message GetProfileRequest{}

message RegisterResponse {
    common.BaseResponse meta = 1;
}

message LoginResponse {
    common.BaseResponse meta = 1;
    string access_token = 2;
}

message LogoutResponse {
    common.BaseResponse meta = 1;
}

message ChangePasswordResponse {
    common.BaseResponse meta = 1;
}

message GetProfileResponse {
    common.BaseResponse meta = 1;
    common.UserResponse data = 2;
}